# selfWatering

./: README.md
auto_initial_pose/: package.xml  setup.cfg  setup.py
auto_initial_pose/auto_initial_pose/: auto_initial_pose.py
gazebo/worlds/: farmWith1CropRow.world
robot_localization_config/: CMakeLists.txt  package.xml
robot_localization_config/config/: ekf.yaml
rotate_robot/: package.xml  setup.cfg  setup.py
rotate_robot/launch/: rotate_robot.launch.py
rotate_robot/rotate_robot/: main.py
stella_navigation2/: CMakeLists.txt  package.xml
stella_navigation2/launch/: autonav.launch.py  navigation2.launch.py
stella_navigation2/scripts/: waypoint_nav.py
stella_navigation2/waypoints/: waypoints.yaml
worlds/: farm_revision.world
