<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stella_navigation2</name>
  <version>2.0.0</version>
  <description>
    STELLA N2 Navigation2 package with autonomous waypoint navigation
    for automatic watering system
  </description>
  
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Navigation2 dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- ROS2 Python dependencies -->
  <depend>rclpy</depend>
  <depend>launch_ros</depend>
  
  <!-- Additional dependencies -->
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>